--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "libfrps-rs"
 version = "0.1.0"
-authors = ["Tomas Siegl <tomas.siegl@firma.seznam.cz>"]
+authors = ["Tomas Siegl <tomas.siegl@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 byteorder = "1.3.2"
+enum_extract = "0.1.1"
